--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&family=Merriweather&display=swap" rel="stylesheet">
 
@@ -11,20 +10,31 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Capture Chrome Extension</title>
+    <title>Capture Reloaded Chrome Extension</title>
   </head>
 
   <body class="text-center body-div">
 
     <div class="title">
-      <a href="https://capture-maximilianjg.herokuapp.com/sources" target="_blank" class="title-text"><span class="underline--magical"> Capture </span></a>
+      <a href="http://www.getcapture.org" target="_blank" class="title-text"><span class="underline--magical"> Capture </span></a>
     </div>
 
-      <div class="capture-btn mt-3">
+      <div class="capture-btn mt-2">
         <button class="button-capture" id="capture-this-btn">Capture it!</button>
       </div>
 
+      <div class="">
+        <select id="folderSelect" class="choose-folder mt-2 form-select" aria-label="Default select example">
+          <option selected>Choose a Folder</option>
+          <!-- <option value="1">One</option>
+          <option value="2">Two</option>
+          <option value="3">Three</option> -->
+        </select>
+      </div>
+
+
     <script type="text/javascript" src="popup.js"></script>
+    <script type="text/javascript" src="scripts/find-send-data.js"></script>
 
   </body>
 </html>
